k8s/01_service.yml
apiVersion: v1
kind: Service
metadata:
  name: ifconfig
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: ifconfig
