k8s/03_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ifconfig-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: nemkovich.dev
    http:
      paths:
      - path: /ifconfig(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: ifconfig
            port:
              name: web
